# NeRF-Renderer

./: README.md  gaussian.py  main.py  nerf.py  objectReflectanceNerf.py  rayTracer.py  reflectance_dataset.py  render.py  scene.py  train.py  vectorObject.py
raytracer/: CMakeLists.txt  pybind11_bindings.cpp
raytracer/include/: Light.hpp  Mesh.hpp  RayTracer.hpp  Vector3.hpp
